# bazel_iwyu

./: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  extensions.bzl  fix_includes_wrapper.py  iwyu.bzl
.github/workflows/: build-release.yml  ci.yml  ruleset-release.yml
bazel/: BUILD.bazel  dependencies.bzl
bazel/iwyu/: BUILD.bazel  iwyu.bzl  toolchain.bzl  versions.bzl
examples/boost/: BUILD.bazel  MODULE.bazel
examples/cross_compilation/: .bazelrc  BUILD  MODULE.bazel
examples/cross_compilation/bazel/: extensions.bzl
examples/gtest/: BUILD.bazel  MODULE.bazel
internal/: README.md  build_iwyu.py
tests/integration/: BUILD.bazel  apply_fix_test.sh  boost_test.sh  cross_compilation_test.sh  custom_mappings_test.sh  gtest_test.sh  iwyu_opts_test.sh  mapping_flag_error_test.sh  version_selection_test.sh
tests/integration/boost/: MODULE.bazel
tests/integration/cross_compilation/: MODULE.bazel
tests/integration/gtest/: MODULE.bazel  sample2.cc  sample2_test.cc
tests/integration/test_workspace/: BUILD.bazel  MODULE.bazel  cuda_sim.cc
tests/version_selection/: BUILD.bazel  version_test.sh
tests/version_selection/test_workspace/: BUILD.bazel  custom_mappings.imp  main.cc  my_header.h
