load("@bazel_skylib//rules:common_settings.bzl", "string_list_flag")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

exports_files(["extensions.bzl"])

label_flag(
    name = "iwyu_mappings",
    build_setting_default = ":iwyu_mappings_default",
)

filegroup(
    name = "iwyu_mappings_default",
    srcs = glob([
        "mappings/*.imp",
    ]),
)

# NOTE(storypku):
# 1) Don't put `--mapping_file=<filename>` here.
# 2) Ref to `include-what-you-use --help` for more.
string_list_flag(
    name = "iwyu_opts",
    build_setting_default = [
        "--cxx17ns",
        "--error=1",
        "--max_line_length=127",
        "--no_fwd_decls",
        "--transitive_includes_only",
    ],
)

filegroup(
    name = "local_repository_files",
    srcs = glob(
        ["**/*"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ) + [
        "//bazel:BUILD.bazel",
        "//bazel:prebuilt_pkg.bzl",
        "//bazel/iwyu:BUILD.bazel",
        "//bazel/iwyu:BUILD.prebuilt_pkg",
        "//bazel/iwyu:iwyu.bzl",
        "//bazel/iwyu:toolchain.bzl",
        "//bazel/iwyu:versions.bzl",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "fix_includes",
    srcs = ["fix_includes_wrapper.py"],
    data = ["@iwyu_prebuilt_pkg//:bin/fix_includes.py"],
    visibility = ["//visibility:public"],
)
