"""Module for the bazel_iwyu repository"""

module(name = "bazel_iwyu")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "aspect_rules_lint", version = "2.7.2")

prebuilt_pkg = use_repo_rule("//bazel:prebuilt_pkg.bzl", "prebuilt_pkg")

prebuilt_pkg(
    name = "iwyu_prebuilt_pkg",
    build_file = "//bazel/iwyu:BUILD.prebuilt_pkg",
    sha256 = {
        "linux-aarch64": "302db27d867a6d406cc63bdc0b9e23944760654aee550671c9ea527bfdca9032",
        "linux-x86_64": "684e3e7193d6a8ee77ed485c0378f64e8c13f8a30c0709545d13c8c1655811c5",
    },
    strip_prefix = {
        "linux-aarch64": "iwyu-0.20-aarch64-linux-gnu",
        "linux-x86_64": "iwyu-0.20-x86_64-linux-gnu",
    },
    urls = {
        "linux-aarch64": [
            "https://github.com/storypku/bazel_iwyu/releases/download/0.20/iwyu-0.20-aarch64-linux-gnu.tar.xz",
        ],
        "linux-x86_64": [
            "https://github.com/storypku/bazel_iwyu/releases/download/0.20/iwyu-0.20-x86_64-linux-gnu.tar.xz",
        ],
    },
)
