"""Module for the bazel_iwyu repository"""

module(name = "bazel_iwyu")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "aspect_rules_lint", version = "2.7.2", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.61.1", dev_dependency = True)

prebuilt_pkg = use_repo_rule("//bazel:prebuilt_pkg.bzl", "prebuilt_pkg")

prebuilt_pkg(
    name = "iwyu_prebuilt_pkg",
    build_file = "//bazel/iwyu:BUILD.prebuilt_pkg",
    sha256 = {
        "linux-aarch64": "01b2afa04f71b970a930a1108d19eb929c65d59b0810e76545056ed4fd121f2f",
        "linux-x86_64": "ae37672c7e34e87e01b017bbd321dedf5e8fda68fcec6f94ca62df0ac5c66231",
        "macos-arm64": "6e8afade21a9e0e1e6b123405047c56333b368802f16f3b6e8e701d4c2b9b58e",
    },
    strip_prefix = {
        "linux-aarch64": "iwyu-0.25.0-aarch64-linux-gnu",
        "linux-x86_64": "iwyu-0.25.0-x86_64-linux-gnu",
        "macos-arm64": "iwyu-0.25.0-arm64-apple-darwin",
    },
    urls = {
        "linux-aarch64": [
            "https://github.com/RealtimeRoboticsGroup/bazel_iwyu/releases/download/iwyu-0.25.0/iwyu-0.25.0-aarch64-linux-gnu.tar.zst",
        ],
        "linux-x86_64": [
            "https://github.com/RealtimeRoboticsGroup/bazel_iwyu/releases/download/iwyu-0.25.0/iwyu-0.25.0-x86_64-linux-gnu.tar.zst",
        ],
        "macos-arm64": [
            "https://github.com/RealtimeRoboticsGroup/bazel_iwyu/releases/download/iwyu-0.25.0/iwyu-0.25.0-arm64-apple-darwin.tar.zst",
        ],
    },
)
