"""Module for the bazel_iwyu repository"""

module(name = "bazel_iwyu")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "aspect_rules_lint", version = "2.7.2", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.61.1", dev_dependency = True)

iwyu = use_extension("//:extensions.bzl", "iwyu")
use_repo(iwyu, "iwyu_prebuilt_pkg")

register_toolchains("//bazel/iwyu:iwyu_prebuilt_toolchain")
