module(name = "iwyu_boost_example")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "bazel_iwyu")
local_path_override(
    module_name = "bazel_iwyu",
    path = "../..",
)

bazel_dep(name = "rules_boost", version = "0.0.0", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
    strip_prefix = "rules_boost-master",
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)
