load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load("@rules_bazel_integration_test//bazel_integration_test:defs.bzl", "bazel_integration_test", "integration_test_utils")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# Shared list of workspace files required for the tests
WORKSPACE_FILES = [
    "test_workspace/BUILD.bazel",
    "test_workspace/MODULE.bazel",
    "test_workspace/main.cc",
    "test_workspace/my_header.h",
    "test_workspace/my_header_custom.h",
    "test_workspace/custom_mappings.imp",
] + [
    "//:local_repository_files",
]

# Run files/runners for each test
sh_binary(
    name = "version_selection_test_runner",
    srcs = ["version_selection_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "apply_fix_test_runner",
    srcs = ["apply_fix_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "custom_mappings_test_runner",
    srcs = ["custom_mappings_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# 1. Version Selection Tests
bazel_integration_test(
    name = "version_selection_test_8",
    bazel_binaries = bazel_binaries,
    bazel_version = "8.0.0",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    test_runner = ":version_selection_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

bazel_integration_test(
    name = "version_selection_test_9",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    test_runner = ":version_selection_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

# 2. Apply Fix Tests
bazel_integration_test(
    name = "apply_fix_test_8",
    bazel_binaries = bazel_binaries,
    bazel_version = "8.0.0",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    test_runner = ":apply_fix_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

bazel_integration_test(
    name = "apply_fix_test_9",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    test_runner = ":apply_fix_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

# 3. Custom Mappings Tests
bazel_integration_test(
    name = "custom_mappings_test_8",
    bazel_binaries = bazel_binaries,
    bazel_version = "8.0.0",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    test_runner = ":custom_mappings_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

bazel_integration_test(
    name = "custom_mappings_test_9",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    test_runner = ":custom_mappings_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)
