load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load("@rules_bazel_integration_test//bazel_integration_test:defs.bzl", "bazel_integration_test", "integration_test_utils")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# Shared list of workspace files required for the tests
WORKSPACE_FILES = [
    "test_workspace/BUILD.bazel",
    "test_workspace/MODULE.bazel",
    "test_workspace/main.cc",
    "test_workspace/cuda_sim.cc",
    "test_workspace/my_header.h",
    "test_workspace/my_header_custom.h",
    "test_workspace/custom_mappings.imp",
] + [
    "//:local_repository_files",
]

BOOST_WORKSPACE_FILES = [
    "boost/BUILD.bazel",
    "boost/MODULE.bazel",
    "boost/MODULE.bazel.lock",
    "boost/archive_example.cc",
] + [
    "//:local_repository_files",
]

GTEST_WORKSPACE_FILES = [
    "gtest/BUILD.bazel",
    "gtest/MODULE.bazel",
    "gtest/MODULE.bazel.lock",
    "gtest/sample2.cc",
    "gtest/sample2.h",
    "gtest/sample2_test.cc",
] + [
    "//:local_repository_files",
]

CROSS_COMPILATION_WORKSPACE_FILES = [
    "cross_compilation/.bazelrc",
    "cross_compilation/BUILD",
    "cross_compilation/MODULE.bazel",
    "cross_compilation/MODULE.bazel.lock",
    "cross_compilation/chromium_sysroot.BUILD",
    "cross_compilation/base/BUILD",
    "cross_compilation/base/atomic_test.cc",
    "cross_compilation/base/math_demo.cc",
    "cross_compilation/bazel/BUILD",
    "cross_compilation/bazel/soctype/BUILD",
] + [
    "//:local_repository_files",
]

# Run files/runners for each test
sh_binary(
    name = "version_selection_test_runner",
    srcs = ["version_selection_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "apply_fix_test_runner",
    srcs = ["apply_fix_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "custom_mappings_test_runner",
    srcs = ["custom_mappings_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "mapping_flag_error_test_runner",
    srcs = ["mapping_flag_error_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "iwyu_opts_test_runner",
    srcs = ["iwyu_opts_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "boost_test_runner",
    srcs = ["boost_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "gtest_test_runner",
    srcs = ["gtest_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "cross_compilation_test_runner",
    srcs = ["cross_compilation_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# 1. Version Selection Tests (Executed for both Bazel 8 and 9)
bazel_integration_test(
    name = "version_selection_test_8",
    bazel_binaries = bazel_binaries,
    bazel_version = "8.0.0",
    tags = [],
    test_runner = ":version_selection_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

bazel_integration_test(
    name = "version_selection_test_9",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = [],
    test_runner = ":version_selection_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

# 2. Apply Fix Tests
bazel_integration_test(
    name = "apply_fix_test",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = [],
    test_runner = ":apply_fix_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

# 3. Custom Mappings Tests
bazel_integration_test(
    name = "custom_mappings_test",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = [],
    test_runner = ":custom_mappings_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

# 4. Mapping Flag Error Validation Tests
bazel_integration_test(
    name = "mapping_flag_error_test",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = [],
    test_runner = ":mapping_flag_error_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

# 5. Positive Custom Options (iwyu_opts) Tests
bazel_integration_test(
    name = "iwyu_opts_test",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = [],
    test_runner = ":iwyu_opts_test_runner",
    workspace_files = WORKSPACE_FILES,
    workspace_path = "test_workspace",
)

# 6. Relocated Boost Example Integration Tests
bazel_integration_test(
    name = "boost_integration_test",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = [],
    test_runner = ":boost_test_runner",
    workspace_files = BOOST_WORKSPACE_FILES,
    workspace_path = "boost",
)

# 7. Relocated GTest Example Integration Tests
bazel_integration_test(
    name = "gtest_integration_test",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = [],
    test_runner = ":gtest_test_runner",
    workspace_files = GTEST_WORKSPACE_FILES,
    workspace_path = "gtest",
)

# 8. Relocated Cross Compilation Example Integration Tests
bazel_integration_test(
    name = "cross_compilation_integration_test",
    bazel_binaries = bazel_binaries,
    bazel_version = "9.0.0",
    tags = ["requires-network"],
    target_compatible_with = ["@platforms//os:linux"],
    test_runner = ":cross_compilation_test_runner",
    workspace_files = CROSS_COMPILATION_WORKSPACE_FILES,
    workspace_path = "cross_compilation",
)
