load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load("@rules_bazel_integration_test//bazel_integration_test:defs.bzl", "bazel_integration_test", "integration_test_utils")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "version_test_runner",
    srcs = ["version_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

bazel_integration_test(
    name = "version_test",
    bazel_binaries = bazel_binaries,
    bazel_version = "8.0.0",
    tags = [],
    test_runner = ":version_test_runner",
    workspace_files = [
        "test_workspace/BUILD.bazel",
        "test_workspace/MODULE.bazel",
        "test_workspace/main.cc",
    ] + [
        "//:local_repository_files",
    ],
    workspace_path = "test_workspace",
)
