load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "main",
    srcs = [
        "main.cc",
        "my_header.h",
        "my_header_custom.h",
    ],
)

cc_library(
    name = "cuda_sim_copts",
    srcs = ["cuda_sim.cc"],
    copts = [
        "-x",
        "cuda",
    ],
)

filegroup(
    name = "custom_mappings",
    srcs = ["custom_mappings.imp"],
    visibility = ["//visibility:public"],
)
